replays/errorlog-20181103-122324-0400-1541262204-32-32-0.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    def has_arrival_conflict(ship, position):
      ^
IndentationError: expected an indented block

